# seedphraser

./: .gitignore  Cargo.toml  README.md  help.hex  help.txt  test.b64
src/: cli.rs  error.rs  gen.rs  lang.rs  main.rs
